[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/MessageDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/keybind_dialog.gd" type="Script" id=2]
[ext_resource path="res://theme/popup_menu_panel.tres" type="StyleBox" id=3]

[node name="KeybindDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PanelContainer" parent="VBoxContainer" index="0"]
custom_styles/panel = ExtResource( 3 )

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Button" to="." method="_on_OkButton_pressed"]
